=== HEAD

* All behavior deprecated in Sequel 3.48.0 has been removed (jeremyevans)

* Make adapter/integration spec environment variables more consistent (jeremyevans)

* Sequel no longer provides default databases for adapter/integration specs (jeremyevans)

* Model#save no longer calls #_refresh internally (jeremyevans)

* Model#set_all and #update_all can now update the primary key (jeremyevans)

* Integrate many_to_one_pk_lookup and association_autoreloading plugins into main associations plugin (jeremyevans)

* Make defaults_setter plugin operate in a lazy manner (jeremyevans)

* Plugins now extend the model class with ClassMethods before including InstanceMethods (jeremyevans)

* Remove Model::EMPTY_INSTANCE_VARIABLES (jeremyevans)

* Model.raise_on_typecast_failure now defaults to false (jeremyevans)

* Model#_save private method now only takes a single argument (jeremyevans)

* Remove Dataset#columns_without_introspection from columns_introspection extension (jeremyevans)

* Make boolean prepared statement arguments work on sqlite adapter when integer_booleans is true (jeremyevans)

* Make Database#tables and #views reflect search_path on PostgreSQL (jeremyevans)

* SQLite now defaults to true for integer_booleans and false for use_timestamp_timezones (jeremyevans)

* Make the default value for most option hashes a shared frozen hash (jeremyevans)

* Remove Sequel::NotImplemented exception (jeremyevans)

* Automatically alias single expressions in Dataset#get, #select_map, and #select_order_map, to work around possible DoS issues (jeremyevans)

* Default to deep qualification when joining (jeremyevans)

* Use a connection queue instead of stack by default for threaded connection pools (jeremyevans)

* Remove SQL::SQLArray alias for SQL::ValueList (jeremyevans)

* Remove SQL::NoBooleanInputMethods empty module (jeremyevans)

=== 3.48.0 (2013-06-01)
